--- a/restful/src/main/resources/application.properties
+++ b/restful/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.messages.encoding=UTF-8
 
 server.port=8083 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/springBoot?useUnicode=true&characterEncoding=utf8 
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf8 
 spring.datasource.username=root 
 spring.datasource.password=123456 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver 
